Fill entire page, prevent y-overflow

--- a/client-app/src/components/pages/Page.module.scss
+++ b/client-app/src/components/pages/Page.module.scss
@@ -7,6 +7,8 @@
     filter: drop-shadow(4px 4px 1px rgba(0, 0, 0, 0.25));
 
     padding-bottom: 20px;
+
+    flex-grow: 1;
 }
 
 .container {
